Closed
Bug 1319529
Opened 9 years ago
Closed 9 years ago
The unblocking icon didn't be hided when resuming Flash
Categories
(Core :: Audio/Video: Playback, defect)
Core
Audio/Video: Playback
Tracking
()
RESOLVED
FIXED
mozilla53
| Tracking | Status | |
|---|---|---|
| firefox50 | --- | unaffected |
| firefox51 | --- | unaffected |
| firefox52 | --- | fixed |
| firefox53 | --- | verified |
People
(Reporter: jaws, Assigned: alwu)
References
Details
Attachments
(2 files)
|
58 bytes,
text/x-review-board-request
|
baku
:
review+
jcristau
:
approval-mozilla-aurora+
|
Details |
|
1.77 MB,
video/mp4
|
Details |
STR:
Open in a new tab via context menu, http://www.freep.com/story/sports/nba/pistons/2016/11/22/detroit-pistons-downtown/94279874/
See media autoplay blocked icon in the tab
Change to the freep.com tab
Using that tab, navigate to https://bugzilla.mozilla.org
ER:
The autoplay-blocked icon should have been removed
AR:
It isn't removed.
Comment 1•9 years ago
|
||
I also stumbled upon this issue on the latest Nightly 53 (Build ID: 20161122030216) with the following STR:
1. Launch Nightly
2. Navigate to:
http://www.be-at.tv/brands/the-record-loft/wax-hounds-with-sven-weisemann/record-loft-djs
3. In the right side, hover your mouse over any video, right click and select Open Link in New Tab
4. After the Play Tab button is displayed, focus the tab opened in the previous step
5. Ctrl+L to focus the address bar and navigate to:
https://bugzilla.mozilla.org
Expected results:
The Tab Play button should not be displayed once the tab is focused in step 4.
Actual results:
The Tab Play button is still displayed after the tab is focused in step 4
The Tab Play button persists in step 5 when navigating to a different site.
status-firefox50:
--- → unaffected
status-firefox51:
--- → unaffected
status-firefox52:
--- → affected
status-firefox53:
--- → affected
| Assignee | ||
Updated•9 years ago
|
Blocks: delay-autoplay
| Assignee | ||
Comment 2•9 years ago
|
||
The issue described in comment1 would be solved in bug1318462.
| Assignee | ||
Comment 3•9 years ago
|
||
I can't reproduce the issue in comment0, it doesn't show the blocking icon when I open new tab for "freep.com".
But the issue in comment1 still exists, and I'll fix.
Assignee: nobody → alwu
| Comment hidden (mozreview-request) |
| Assignee | ||
Updated•9 years ago
|
Summary: Media autoplay blocking icon persists after tab has navigated to different website → The unblocking icon won't be hided when resuming Flash
| Assignee | ||
Updated•9 years ago
|
Summary: The unblocking icon won't be hided when resuming Flash → The unblocking icon didn't be hided when resuming Flash
| Assignee | ||
Updated•9 years ago
|
Attachment #8819246 -
Flags: review?(amarchesini)
Comment 5•9 years ago
|
||
| mozreview-review | ||
Comment on attachment 8819246 [details]
Bug 1319529 - notify audible state changed for nsNPAPI.
https://reviewboard.mozilla.org/r/99088/#review99710
Attachment #8819246 -
Flags: review?(amarchesini) → review+
| Assignee | ||
Comment 6•9 years ago
|
||
Pushed by alwu@mozilla.com:
https://hg.mozilla.org/integration/autoland/rev/207f132f1427
notify audible state changed for nsNPAPI. r=baku
Comment 8•9 years ago
|
||
| bugherder | ||
Status: NEW → RESOLVED
Closed: 9 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla53
Comment 9•9 years ago
|
||
I can still reproduce this issue on Ubuntu 16.04 using the latest Nightly 53.0a1 (Build ID: 20170108030212)
Please note that I can't reproduce the issue on Windows 10 x64 and Mac OS X 10.11.
STR:
1. Open http://www.be-at.tv/brands/the-record-loft/wax-hounds-with-sven-weisemann/record-loft-djs in a background tab
2. Focus the tab opened in step 1 and then focus the URL Bar (Ctrl+L)
3. Navigate to bugzilla.mozilla.org
Expected results:
The Play tab icon should not persist after the tab is in focus.
Actual results:
The play tab icon remains after focusing the tab and persists after navigating further.
Please see the attached screencast for more details.
Updated•9 years ago
|
Status: RESOLVED → REOPENED
Resolution: FIXED → ---
| Assignee | ||
Comment 10•9 years ago
|
||
Close this bug because it seems caused by different root cause (linux-specific).
I open the bug1330195 for tracking.
Status: REOPENED → RESOLVED
Closed: 9 years ago → 9 years ago
Depends on: 1330195
Resolution: --- → FIXED
| Assignee | ||
Comment 12•8 years ago
|
||
Comment on attachment 8819246 [details]
Bug 1319529 - notify audible state changed for nsNPAPI.
Approval Request Comment
[Feature/Bug causing the regression]: This patch allow nsNPAPI to notify audio channel service when it changes the audible state
[User impact if declined]: The "play tab" icon won't be hided when nsNPAPI was resumed
[Is this code covered by automated tests?]: yes
[Has the fix been verified in Nightly?]: yes
[Needs manual test from QE? If yes, steps to reproduce]: no
[List of other uplifts needed for the feature/fix]: no
[Is the change risky?]: no
[Why is the change risky/not risky?]: only affect UX
[String changes made/needed]: no
Flags: needinfo?(alwu)
Attachment #8819246 -
Flags: approval-mozilla-aurora?
Comment 13•8 years ago
|
||
Comment on attachment 8819246 [details]
Bug 1319529 - notify audible state changed for nsNPAPI.
properly update audible state for npapi plugins, aurora52+
Attachment #8819246 -
Flags: approval-mozilla-aurora? → approval-mozilla-aurora+
Comment 14•8 years ago
|
||
Considering Comment 9 and 10, setting status-firefox53: to verified.
Comment 15•8 years ago
|
||
| bugherder uplift | ||
Flags: in-testsuite+
You need to log in
before you can comment on or make changes to this bug.
Description
•