Bug 1319529 - Notify audible state changed for nsNPAPI. r=baku, a=jcristau

When the nsNPAPI is muted by AudioChannelService, we should notify our audible state changed.

MozReview-Commit-ID: 1YHGZiyIRvI